[Fix] Change the breakpoint for the navbar-collapse

--- a/app/Resources/less/variables.less
+++ b/app/Resources/less/variables.less
@@ -251,7 +251,7 @@
 // Navbar collapse
 
 // Point at which the navbar becomes uncollapsed
-@grid-float-breakpoint:     @screen-sm-min;
+@grid-float-breakpoint: @screen-md-min;
 // Point at which the navbar begins collapsing
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
